@@ -50,6 +50,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18518: timeit now rejects statements which can't be compiled outside
+  a function or a loop (e.g. "return" or "break").
+
 - Issue #23094: Fixed readline with frames in Python implementation of pickle.
 
 - Issue #23268: Fixed bugs in the comparison of ipaddress classes.
